# espg-lunar-potential-map

./: .coverage  .gitignore  .pre-commit-config.yaml  .zenodo.json  AGENTS.md  CITATION.cff  LICENSE  PLAN_LOSSCONE_FIT.md  README.md  config.py  data.py  environment-base.yml  flux.py  kappa_fitter.py  model.py  potential_mapper.py  pyproject.toml  pytest.ini  requirements.txt  utils.py
.gemini/: GEMINI.md
.github/workflows/: ci.yml
.qwen/: QWEN.md
artifacts/: normalization_experiments.md
artifacts/reports/: pipeline_benchmark.txt  terminator_charge_summary.md
data/: .gitkeep
docs/: Calculation.md  FUNCTIONALITY.md  PHYSICS.md  PLOTTING.md  README.md  WALKTHROUGH.md  development.md  diagnostics.md  loss_cone_model.md  potential_mapper_batch.md  potential_pipeline.md  temporal.md  temporal_basis_analysis.md  temporal_fitting_approaches.md  temporal_module_overview.md
docs/analysis/: beam_amplitude_sensitivity.md  fitter_error_analysis.md  kappa_fitter_summary.md  spacecraft_potential_analysis.md  temporal_harmonic_analysis.md  weighted_vs_unweighted_fits_analysis.md
docs/architecture/: coordinate_frames.md  er_measurement_contract.md  gpu_acceleration.md  pipeline_overview.md
docs/cli/: analysis.md  data_acquisition.md  diagnostics.md  engineering.md  potential_mapper.md  potential_mapper_batch.md  temporal.md
docs/dev/: development.md  lockfiles.md  performance_and_type_safety_audit.md
docs/experimental/: PARALLEL_SC_POTENTIAL.md  PIPELINE_COMPARISON.md  loss_cone_fitting_problem.md
docs/notes/: 2024-06-07-session-notes.md
docs/old/: potential_pipeline.md  temporal_module_overview.md
docs/physics/: profile_likelihood_ci.md  spacecraft_potential.md
docs/visualization/: visualization.md
locks/: uv.lock.cuda11  uv.lock.cuda12
notebooks/: feature_distribution.ipynb  kappa_fitter.ipynb  potential_cache.ipynb
reports/: terminator_charge_summary.md
scripts/: bootstrap.sh  electron_density_temperature_day.py  energy_pitch_interactive.py  error_distribution_analysis.py  plot_flux_energy_pitch.py  plot_synthetic_er.py  profile_density_fitter.py  profile_kappa_fitter.py  profile_potential_pipeline.py  re_evaluate_fitter.py  select-env.sh  spacecraft_potential_day.py  temperature_weighting_comparison.py
scripts/analysis/: compute_regime_stats.py  electron_density_temperature.py  energy_pitch_explorer.py  flux_pitch_plot.py  plot_daily_measurements.py  polar_potential_diagnostics.py  potential_charge_report_md.py  potential_map_matplotlib_sphere.py  potential_map_plotly_static.py  potential_map_plotly_terminator.py  potential_terminator_charge.py  potential_timeseries_daily_png.py  potential_timeseries_plotly.py  residual_analysis.py  spacecraft_potential_series.py  spacecraft_potential_timeseries.py  summarize_daily_measurements.py  temporal_cv.py  temporal_cv_grid.py  temporal_harmonics_analysis.py  temporal_harmonics_animate.py  temporal_harmonics_animate_terminator.py  temporal_harmonics_azimuthal_modes.py  temporal_harmonics_interactive_map.py  temporal_harmonics_l_curve.py  temporal_harmonics_smoothness.py  validate_phys_models.py
scripts/deprecate/: diagnose_longitude_90.py  error_distribution_analysis.py  re_evaluate_fitter.py
scripts/dev/: bench_pipelines.sh  bench_sc_parallel.py  benchmark_csv_parsing.py  benchmark_kappa_torch.py  benchmark_torch_losscone.py  check_spice_coverage.py  compare_losscone_beam.py  compare_pipelines.py  interactive_loss_cone_viewer.py  losscone_compare_beam.py  losscone_plot_fit.py  losscone_run_chunk.sh  losscone_studio_synthetic.py  monthly_temporal_fit.sh  pipeline_injection_tests.py  plot_loss_cone_fit.py  plot_losscone_3panel.py  plot_losscone_fit.py  plot_potential_timeseries.py  plot_synthetic_er.py  potential_cache_reader.py  potential_cache_reader.sh  potential_mapper_batch.py  potential_npz_reader.py  profile_potential_mapper.py  render_monthly_temporal_animation.sh  serve_losscone_range_viewer.py  serve_losscone_sc_bs_viewer.py  temporal_harmonic_coefficients.py  temporal_harmonics_animate_terminator.py  temporal_lambda_comparison.py  test_batched_losscone.py  test_beam_amp_sensitivity.py  test_kappa_synthetic_poisson.py  test_kappa_variations.py  test_parallel_sc_potential.py  validate_torch_losscone.py  verify_model_baseline.py  verify_model_compare.py
scripts/diagnostics/: beam_detection_survey.py  beam_label_studio.py  beam_losscone_crossval.py  beam_potential_estimate.py  level0_calibrated_match.py  level0_er3d_probe.py  losscone_fit_compare.py  losscone_orbit_studio.py  losscone_peak_scan.py  losscone_profile_ci.py  losscone_studio.py  losscone_u_profile.py  r_bound_artifact_check.py  view_norm2d.py
scripts/plots/: plot_harmonic_reconstruction_multiday.py  plot_harmonic_reconstruction_paper.py  plot_losscone_fit_paper.py  plot_measurements_hemispheric.py  plot_measurements_paper.py  plot_terminator_profile_paper.py  (+1 more)
spice_kernels/: .gitkeep
src/: config.py  data.py  data_acquisition.py  flux.py  kappa.py  kappa_fitter.py  kappa_fitter_old.py  kappa_torch.py  loss_cone_visualizer.py  losscone_torch.py  model.py  model_torch.py  potential_calculator.py  potential_mapper.py  spacecraft_potential.py
src/losscone/: cpu.py  (+17 more)
tests/: conftest.py  test_beam_detection.py  test_coordinate_calculator.py  test_data_acquisition.py  test_engineering.py  test_er_measurement_contract.py  test_flux.py  test_flux_lhs_vectorization.py  test_flux_warm_starting.py  test_geometry.py  test_harmonics.py  test_import_hygiene.py  test_integration_seams.py  test_kappa.py  test_kappa_fitter.py  test_kappa_response_parity.py  test_kappa_torch.py  test_level0.py  test_lillis_mask.py  test_losscone_cpu.py  test_losscone_parity.py  test_losscone_torch_batched.py  test_model_equivalence.py  test_model_masking.py  test_model_torch.py  test_potential_calculator.py  test_profile_ci.py  test_profile_ci_coverage.py  test_raw_calibration.py  test_results.py  test_temporal_basis.py  test_temporal_coefficients.py  test_validation_script.py
todos/: technical_concerns.md
utils/: attitude.py  file_ops.py  geometry.py  spice_ops.py
(+142 files in other folders)
