[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "espg-lunar-potential-map"
version = "0.1.0"
description = "Lunar Prospector Surface Potential Mapping Analysis"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Alazar Teka Gemechu", email = "alazargemechu@kaist.ac.kr" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.2.0",
    "scipy>=1.14.0",
    "matplotlib>=3.9.0",
    "spiceypy>=6.0.0",
    "plotly>=6.0.0",
    "beautifulsoup4>=4.13.0",
    "requests>=2.32.0",
    "tqdm>=4.67.0",
    "pint>=0.24.4",
    "numba>=0.61.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
notebook = ["jupyter>=1.1.0", "ipykernel>=6.29.0", "ipython>=8.34.0"]
export = ["imageio[ffmpeg]>=2.37.0", "kaleido>=1.1.0"]
diagnostics = ["panel>=1.4.0", "bokeh>=3.4.0"]
gpu = ["torch>=2.7.0"]  # GPU acceleration (CUDA 12.8, RTX 20xx+, including 50xx)
gpu-legacy = ["torch>=2.2,<2.3"]  # CUDA 11.8 builds for GTX 10xx (sm_61)

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.15.0",
    "snakeviz>=2.2.2",
]
test = ["pytest>=8.0.0", "pytest-cov>=5.0.0"]
lint = ["ruff>=0.8.0", "mypy>=1.15.0"]

[project.urls]
Homepage = "https://github.com/alazarteka/espg-lunar-potential-map"
Repository = "https://github.com/alazarteka/espg-lunar-potential-map"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
# GPU acceleration options:
# - Modern GPU (RTX 20xx-50xx): uv sync --extra gpu
# - Legacy GPU (GTX 10xx): uv sync --extra gpu-legacy
index-strategy = "unsafe-best-match"
required-environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "extra == 'gpu'" },
    { index = "pytorch-cu118", marker = "extra != 'gpu' and extra == 'gpu-legacy'" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "skip_ci: marks tests to skip in CI",
    "slow: marks tests as slow",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "UP", "SIM", "C4", "PT", "RUF", "TCH", "PERF"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"scripts/**/*.py" = ["E501"]
"notebooks/**/*.ipynb" = ["E501"]
# E741: 'l' is standard notation for spherical harmonic degree
"src/temporal/coefficients.py" = ["E741"]
"src/temporal/reconstruction.py" = ["E741"]
"src/engineering/analysis.py" = ["E741"]
"src/flux.py" = ["E501"]
"src/utils/injection_tests.py" = ["F841"]
# Test-specific: allow compound assertions, unused unpacking, broad raises, parametrize style
"tests/**/*.py" = ["PT006", "PT011", "PT018", "RUF059", "B007", "TC003"]
# Allow unicode in scientific code (μ, °, eV, etc.)
"src/**/*.py" = ["RUF001", "RUF002", "RUF003"]
# Allow line length in config comments and CLI formatting strings
"src/config.py" = ["E501", "RUF001", "RUF002", "RUF003"]
"src/engineering/cli.py" = ["E402", "E501"]
# Allow late imports for conditional/expensive deps (torch, GPU checks)
"src/potential_mapper/__init__.py" = ["E402"]
"src/physics/kappa_torch.py" = ["E402"]
"src/kappa_torch.py" = ["E402"]
"src/model_torch.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "spiceypy.*",
    "plotly.*",
    "numba.*",
    "scipy.*",
    "pandas.*",
    "matplotlib.*",
    "tqdm.*",
]
ignore_missing_imports = true
